--- a/estagio.html
+++ b/estagio.html
@@ -8,11 +8,16 @@
     <h2>Introdução</h2>
     <p>Este relatório apresenta uma síntese das atividades desenvolvidas durante o período de estágio realizado na empresa da Steam.
          O estágio teve a duração de 500 horas e teve como objetivo proporcionar uma experiência prática e enriquecedora na área de Crianção de jogos .</p>
+
     <h2>Objetivos</h2>
+
     <h3>Objetivo Geral</h3>
+
     <p>O objetivo geral deste estágio foi adquirir conhecimentos práticos, aprimorar habilidades e compreender o funcionamento da empresa Steam,
         bem como contribuir para as atividades desempenhadas no setor de jogos da organização.</p>
+
     <h3>Objetivos Específicos</h3>
+
     <p>Durante o período de estágio, foram estabelecidos os seguintes objetivos específicos:</p>
     <ul>
       <li>Compreender os processos e rotinas operacionais do setor da informatica.</li>
@@ -21,19 +26,26 @@
       <li>Colaborar na análise de opnião sobre desing</li>  
       <li>Integrar-se à equipe de trabalho, contribuindo para um ambiente de cooperação e aprendizado.</li>
     </ul>
+
     <h2>Atividades realizadas</h2>
     <p>Durante o estágio, diversas atividades foram desempenhadas, das quais destacam-se as seguintes:</p>
+
     <h3>Atividade 01:Atendimento ao Cliente </h3>
+
     <p>Nesta atividade, fui responsável por responder duvidas e resolver os problemas reportados pelo cliente no site. 
         Isso incluiu ter conhecimentos para resolver os problemas reportados.</p>
+
     <h3>Atividade 02:</h3>
+
     <p>Na segunda atividade, minha responsabilidade foi obeservar e praticar no setor do desevolvimento de jogos. 
         Durante essa atividade, obtive experiência em progrmaçaão e criação de jogos
          e contribuí para melhorar o meu conhecimento e no futuro ter uma vaga de emprego.</p>
     
     <h2>Conclusão</h2>
-    <p>O estágio na empresa XYZ proporcionou uma valiosa oportunidade de aprendizado e crescimento profissional. Ao longo desse período, pude alcançar os objetivos estabelecidos, adquirindo conhecimentos práticos e desenvolvendo habilidades relevantes para minha formação. Agradeço à equipe da empresa pela orientação e apoio fornecidos durante o estágio, que contribuíram significativamente para o meu desenvolvimento profissional.
-        Este estágio foi fundamental para consolidar meu interesse na área de [inserir</p>
+
+    <p>O estágio na empresa da Steam proporcionou uma valiosa oportunidade de aprendizado e crescimento profissional. Ao longo desse período, pude alcançar os objetivos estabelecidos,
+        adquirindo conhecimentos práticos e desenvolvendo habilidades relevantes para minha formação. Agradeço à equipe da empresa pela orientação e apoio fornecidos durante o estágio, que contribuíram significativamente para o meu desenvolvimento profissional.
+        Este estágio foi fundamental para consolidar meu interesse na área de Informatica</p>
 </body>
 
 </html>
