--- a/aspiracoes.html
+++ b/aspiracoes.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
-    <title>Aspirações/title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
     <h1>Aspirações</h1>
-
-    <p>Eu desejo muito dinheiro para minha vida na area da tecnologia</p>
-
-    <ul>
-        <li>Sistema de Informação</li>
-        <li>Engenharia de Software</li>
-        <li>Programação ou Análise e Desenvolvimento de Sistemas</li>
-        <li>Administração de Redes de Computadores</li>
-        <li>Informática Biomédica</li>
-    </ul>
+    <p> Eu desejo muito dinheiro para minha vida na area da tecnologia
+        </p>
+        <ul>
+            <li>Sistema de Informação</li>
+            <li>Engenharia de Software</li>
+            <li>Programação ou Análise e Desenvolvimento de Sistemas</li>
+            <li>Administração de Redes de Computadores</li>
+            <li>Informática Biomédica</li>
+        </ul>
 </body>
 </html>
